<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#A8E6A3">

    <!-- Back Button at Top-Left -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:text="@string/button_back"
        android:textColor="#FFFFFF"
        android:background="#FF8A80"
        android:textSize="30sp"
        android:padding="16dp" />

    <!-- Repeat Button at Top-Right -->
    <Button
        android:id="@+id/btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="@string/button_repeat"
        android:textColor="#FFFFFF"
        android:background="#4FC3F7"
        android:textSize="30sp"
        android:padding="16dp" />

    <!-- Centered TextView -->
    <TextView
        android:id="@+id/result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#4FC3F7"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:padding="16dp"
        android:text="                    " />

    <!-- Reset Button at Bottom-Right -->
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="@string/button_reset"
        android:textColor="#FFFFFF"
        android:background="#81C784"
        android:textSize="30sp"
        android:padding="16dp" />
    <Button
        android:id="@+id/btn_enter_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enter_answer"
        android:background="#81C784"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
